--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,7 @@ Werkzeug==1.0.1
 Logbook==1.5.3
 SQLAlchemy==1.3.22
 passlib==1.7.4
-alembic==1.4.3
+alembic==1.5.2
 babel==2.9.0
+markdown==3.3.3
+pygments==2.7.4
